RESOLVED FIXED57292
[chromium] Compositor crash with show-layer-borders flag
https://bugs.webkit.org/show_bug.cgi?id=57292
Summary [chromium] Compositor crash with show-layer-borders flag
James Robinson
Reported 2011-03-28 18:55:25 PDT
[chromium] Compositor crash with show-layer-borders flag
Attachments
Patch (3.25 KB, patch)
2011-03-28 18:56 PDT, James Robinson
no flags
James Robinson
Comment 1 2011-03-28 18:56:29 PDT
James Robinson
Comment 2 2011-03-28 19:06:09 PDT
I borkeded --show-composited-layer-borders. Fix is easy, though!
Kenneth Russell
Comment 3 2011-03-29 11:53:16 PDT
Comment on attachment 87248 [details] Patch Looks good to me.
WebKit Commit Bot
Comment 4 2011-03-29 19:00:53 PDT
Comment on attachment 87248 [details] Patch Clearing flags on attachment: 87248 Committed r82381: <http://trac.webkit.org/changeset/82381>
WebKit Commit Bot
Comment 5 2011-03-29 19:00:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.